added user module
